--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "eslint"
   ],
   "dependencies": {
+    "antd": "^3.6.4",
     "axios": "^0.17.0",
+    "moment": "^2.22.2",
     "node-sass": "^4.7.1",
     "pug": "^2.0.0-rc.4",
-    "webpack": "^3.10.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "next",
@@ -33,7 +34,8 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-form": "^7.2.1",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "webpack": "^3.10.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
