--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# production
+/dist
+
+# misc
 .DS_Store
-node_modules/
-dist/
 npm-debug.log*
-yarn*
-test/unit/coverage
-test/e2e/reports
-selenium-debug.log
