--- a/package.json
+++ b/package.json
@@ -1,111 +1,73 @@
 {
-  "name": "dataapi-web",
-  "version": "1.1.0",
-  "description": "dataapi-web react+react-redux+webpack+react-saga+react-router+eslint",
-  "author": "rasir <273581871@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "build:qa": "node build/build.js",
-    "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
-    "eslint": "./node_modules/eslint/bin/eslint.js --ext .js src",
-    "fix": "./node_modules/eslint/bin/eslint.js --ext .js src  --fix"
+    "start": "roadhog server",
+    "dev": "cross-env ESLINT=none BROWSER=none roadhog dev",
+    "build": "cross-env PUBLIC_PATH='./' roadhog build",
+    "lint": "eslint --ext .js src test"
   },
-  "precommit": [
-    "precommit-msg",
-    "eslint"
-  ],
-  "pre-commit": [
-    "precommit-msg",
-    "eslint"
-  ],
   "dependencies": {
-    "antd": "^3.6.4",
-    "axios": "^0.17.0",
-    "moment": "^2.22.2",
-    "node-sass": "^4.7.1",
-    "pug": "^2.0.0-rc.4",
+    "antd-mobile": "^2.1.9",
+    "axios": "^0.18.0",
+    "babel-preset-env": "^1.6.1",
+    "dva": "^2.1.0",
+    "dva-loading": "^2.0.1",
+    "jquery": "^3.3.1",
+    "leaflet": "^1.3.1",
+    "moment": "^2.22.1",
+    "rc-form": "^2.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-hot-loader": "next",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
-    "redux-form": "^7.2.1",
-    "redux-saga": "^0.16.0",
-    "webpack": "^3.10.0"
+    "react-hammerjs": "^1.0.1",
+    "react-helmet": "^5.2.0",
+    "react-sticky": "^6.0.2",
+    "vconsole": "^3.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^8.0.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-import": "^1.6.3",
-    "babel-plugin-istanbul": "^4.1.5",
-    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-eslint": "^8.1.2",
+    "babel-plugin-dva-hmr": "^0.3.2",
+    "babel-plugin-import": "^1.7.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-optimize": "^1.0.1",
-    "babel-register": "^6.26.0",
-    "bundle-loader": "^0.5.5",
-    "chalk": "^2.0.1",
-    "classnames": "^2.2.5",
-    "connect-history-api-fallback": "^1.5.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
-    "eslint": "^4.15.0",
-    "eslint-config-airbnb-base": "^11.3.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-html": "^4.0.2",
+    "babel-polyfill": "^6.26.0",
+    "cross-env": "^5.1.4",
+    "enzyme": "^3.1.0",
+    "eslint": "^4.14.0",
+    "eslint-config-airbnb": "^16.0.0",
+    "eslint-plugin-babel": "^4.0.0",
+    "eslint-plugin-compat": "^2.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.5.1",
-    "eventsource-polyfill": "^0.9.6",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
-    "http-proxy-middleware": "^0.17.4",
-    "inject-loader": "^3.0.1",
-    "mockjs": "^1.0.1-beta3",
-    "node-notifier": "^5.1.2",
-    "opn": "^5.3.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "postcss-url": "^7.2.1",
-    "pure-render-decorator": "^1.2.1",
-    "rimraf": "^2.6.0",
-    "sass-loader": "^6.0.6",
-    "sass-resources-loader": "^1.3.2",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "style-loader": "^0.21.0",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
-    "webpack-bundle-analyzer": "^2.9.2",
-    "webpack-dev-middleware": "^2.0.4",
-    "webpack-hot-middleware": "^2.21.0",
-    "webpack-merge": "^4.1.1"
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
+    "husky": "^0.12.0",
+    "mock": "^0.1.1",
+    "postcss-aspect-ratio-mini": "^0.0.2",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.1.0",
+    "postcss-px-to-viewport": "^0.0.3",
+    "postcss-pxtorem": "^4.0.1",
+    "postcss-url": "^7.3.2",
+    "postcss-viewport-units": "^0.1.4",
+    "postcss-write-svg": "^3.0.1",
+    "redbox-react": "^1.4.3",
+    "regenerator-runtime": "^0.11.1",
+    "roadhog": "^2.3.0",
+    "roadhog-api-doc": "^0.3.4",
+    "viewport-units-buggyfill": "^0.6.2"
+  },
+  "optionalDependencies": {
+    "puppeteer": "^1.1.1"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx}": "lint-staged:js",
+    "**/*.less": "stylelint --syntax less"
   },
   "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+    "node": ">=8.0.0"
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
+    "iOS >= 7",
+    "Android > 4.4",
+    "Chrome > 30",
+    "not ie <= 9"
   ]
 }
